Revert "WIP:月次の勤怠実績取得時、週単位で取得するように変更"
This reverts commit 9663e713561059d3ac863f50a926404f8b7934c8.